# QAI-Tester

./: .gitignore  README.md  futurescope.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 2026_05_05_0000-0001_initial_app_settings.py  2026_05_05_0010-0002_projects.py  2026_05_05_0020-0003_documents.py  2026_05_05_0030-0004_add_instructions_kind.py  2026_05_05_0040-0005_test_plans.py  2026_05_05_0050-0006_requirements_agent_runs.py  2026_05_05_0060-0007_tc_nodes.py  2026_05_05_0070-0008_execution_steps.py  2026_05_07_0010-0009_inconclusive_status.py  2026_05_07_0020-0010_demo_mode.py  2026_05_07_0030-0011_rename_demo_to_ai_mode.py  2026_05_08_0010-0012_frozen_path.py  2026_05_09_0010-0013_cheap_model.py  2026_05_09_0020-0014_vault_totp.py  2026_05_09_0030-0015_agent_strategy.py  2026_05_09_0040-0016_app_knowledge.py  2026_05_11_0010-0017_cost_tracking.py  2026_05_11_0020-0018_llm_call_logs.py  2026_05_11_0030-0019_cached_input.py  2026_05_12_0010-0020_sub_goals_and_som.py  2026_05_12_0020-0021_tc_versioning.py  2026_05_12_0030-0022_tc_validation.py  2026_05_12_0040-0023_agent_run_kind_recon.py  2026_05_12_0050-0024_sub_flow_modules.py  2026_05_13_0010-0025_llm_tiered_providers.py  2026_05_13_0020-0026_agent_run_kind_record.py
backend/app/: config.py  db.py  main.py
backend/app/agents/: __init__.py  app_map.py  auth_flow.py  authenticated_scout.py  brd_to_frd.py  execute.py  form_signals.py  frd_to_tc.py  goal.py  page_intel.py  qa_agent.py  recon.py  replay.py  (+3 more)
backend/data/: .vault_key
(+154 files in other folders)
