[project]
name = "qai-tester-backend"
version = "0.1.0"
description = "QAI Tester v2 — Agentic QA platform backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.3",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "faiss-cpu>=1.8.0",
    "pymupdf4llm>=0.0.17",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.9",
    "playwright>=1.48.0",
    "openpyxl>=3.1.0",
    "pillow>=10.0.0",
    # Phase 3 — vault: Fernet encryption-at-rest + TOTP code generation
    "cryptography>=43.0.0",
    "pyotp>=2.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[tool.uv]
package = false
